Fixed background flicker

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -41,11 +41,6 @@ e. Others
     to {opacity: 1;}
 }
 
-.transition {
-    animation-name: fadein;
-    animation-duration: 2s;
-}
-
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
