--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -39,7 +39,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url(../images/galaxypaint.jpg) no-repeat top center;
+   background: #000;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
